frontenddeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp-svc
  namespace: flask
spec:
  type: NodePort
  selector:
    role: flask
  ports:
    - port: 8010
      targetPort: 8010
      nodePort: 30080
      protocol: TCP


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-deploy
  namespace: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      role: flask
  template:
    metadata:
      labels:
        role: flask
    spec:
      containers:
      - name: ftapp
        image: kiranrepository2023/flaskapp:v61 
        ports:
        - containerPort: 8010
      imagePullSecrets:
       - name: regcred
