ingressflask.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: flask
spec:
  rules:
  - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaskapp-svc
                port:   
                  number: 30080
